--- a/Dashboard/assets/scss/layout/_sidebar.scss
+++ b/Dashboard/assets/scss/layout/_sidebar.scss
@@ -22,8 +22,9 @@
     top: 50%;
     left: 100%;
     transform: translateY(-50%);
+    transition: all ease-in 0.4s;
     .icon {
-        transition: all 0.4s;
+        transition: all ease-in 0.4s;
     }
 }
 
@@ -35,7 +36,7 @@
         transform-origin: center;
         right: -124px;
         left: auto;
-        transition: all 0.4s;
+        transition: all ease-in 0.4s;
         .icon {
             display:block;
             transform: rotate(180deg);
